# Not-Clickbait

./: README.md  app.py  main.py  pyproject.toml
data/: clickbait_title_classification.csv
images/: techx.avif
models/: vectorizer.pkl  xgboost_clickbait.json
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  model.ipynb
